web/resources/css/member.css
/* ... */
.dashboard-left-sidebar-ul > li > .active,.dashboard-left-sidebar-ul > li > .active:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    color: #F68521!important;
    font-weight: bold;
}

.dashboard-left-sidebar-ul > li > a{
    font-family: "tw-cen-mt";
    text-decoration: none;
    padding: 6px 0;
    font-size: 18px;
    color: #216db1;
    line-height: 2em;
}
.dashboard-left-sidebar-ul > li > a:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    padding: 6px 0;
    color: #F68521;
    line-height: 2em;
}
/* ---------------------------- Feature Ad Left Sidebar Menu -------------------------------- */

.featured-ad-left-sidebar-ul{
    padding: 0; 
    margin: 0; 
    list-style-type: none;
}
.featured-ad-left-sidebar-ul > li > .active,.featured-ad-left-sidebar-ul > li > .active:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    color: #f68521!important;
    font-weight: bold;
}

.featured-ad-left-sidebar-ul > li > a{
    font-family: "tw-cen-mt";
    padding: 6px 0;
    font-size: 18px;
    color: #216db1;
    line-height: 2em;
}
.featured-ad-left-sidebar-ul > li > a:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    padding: 6px 0;
    color: #f68521;
    line-height: 2em;
}
/* ---------------------------- Profile Left Sidebar Menu -------------------------------- */

.profile-left-sidebar-ul{
    padding: 0; 
    margin: 0; 
    list-style-type: none;
}
.profile-left-sidebar-ul > li > .active,.profile-left-sidebar-ul > li > .active:hover{
    font-family: "tw-cen-mt";
    text-decoration: none;
    color: #f68521 !important;
    font-weight: bold;
}

.profile-left-sidebar-ul > li > a{
    font-family: "tw-cen-mt";
    padding: 6px 0;
    font-size: 18px;
    color: #216db1;
    line-height: 2em;
}
.profile-left-sidebar-ul > li > a:hover,profile-left-sidebar-ul > li > a:focus,profile-left-sidebar-ul > li > a:visited{
    font-family: "tw-cen-mt";
    text-decoration: none;
    padding: 6px 0;
    color: #F68521;
    line-height: 2em;
}
/* ---------------------------- Manage Product Left Sidebar Menu -------------------------------- */

.tabs-right > .nav-tabs,
.tabs-left > .nav-tabs {
    border-bottom: 0;
}

.tab-content > .tab-pane,
.pill-content > .pill-pane {
    display: none;
}

.tab-content > .active,
.pill-content > .active {
    display: block;
}


.tabs-left > .nav-tabs > li,
.tabs-right > .nav-tabs > li {
    float: none;
}

.tabs-left > .nav-tabs > li > a,
.tabs-right > .nav-tabs > li > a {
    margin-bottom: 3px;
}

.tabs-left > .nav-tabs {
    margin-right: 19px;
    border-right: 1px solid #ddd;
}

.tabs-left  .nav-tabs  li  a {
    background: #2b79bf; 
    background: -moz-linear-gradient(top, #2b79bf 0%, #0a4f7d 100%); 
    background: -webkit-linear-gradient(top, #2b79bf 0%,#0a4f7d 100%); 
    background: linear-gradient(to bottom, #2b79bf 0%,#0a4f7d 100%); 
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b79bf', endColorstr='#0a4f7d',GradientType=0 ); 
    color: #fff;
    margin-right: -1px;
    -webkit-border-radius: 4px 0 0 4px;
    -moz-border-radius: 4px 0 0 4px;
    border-radius: 0;
    padding: 10px 20px;
    text-align: center;
    margin-bottom: 2px;
    text-transform: uppercase;
}

.tabs-left .nav-tabs  li  a:hover,
.tabs-left  .nav-tabs  li  a:focus {
    background: #f6a224; 
    background: -moz-linear-gradient(top, #f6a224 0%, #f75d1e 100%); 
    background: -webkit-linear-gradient(top, #f6a224 0%,#f75d1e 100%); 
    background: linear-gradient(to bottom, #f6a224 0%,#f75d1e 100%); 
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6a224', endColorstr='#f75d1e',GradientType=0 );
    color: #fff;
}

.tabs-left  .nav-tabs .active  a,
.tabs-left .nav-tabs .active a:hover,
.tabs-left  .nav-tabs .active  a:focus {
    background: #f6a224; 
    background: -moz-linear-gradient(top, #f6a224 0%, #f75d1e 100%); 
    background: -webkit-linear-gradient(top, #f6a224 0%,#f75d1e 100%); 
    background: linear-gradient(to bottom, #f6a224 0%,#f75d1e 100%); 
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6a224', endColorstr='#f75d1e',GradientType=0 );
    color: #fff;
}








/* ---------------------------- Dashboard -------------------------------- */
.dashboard-welcome-note{
    font-size: 28px;
    font-family: "tw-cen-mt";
    color: #216db1;
    text-align: center;
    margin-top: 25px;
}
.dashboard-box-option-layout{
    border: 2px solid #216db1;
    text-align: center;
    padding: 50px;
}
.dashboard-box-option-layout h2{
    font-size: 18px;
    font-family: "tw-cen-mt";
    color: #216db1;
}
/* ---------------------------- Saved Ads -------------------------------- */
.saved-ads-product-heading{
    font-size: 28px;
    font-family: "tw-cen-mt";
    color: #216db1;
    margin-top: 25px;
}
.saved-ads-product-layout{
    padding: 0px 25px;
    border: 1px solid #216db1;
    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
    border-radius: 0px;
}
.saved-ads-product-title{
    font-size: 16px;
    font-family: "tw-cen-mt";
    color: #484848;
    line-height: 1.5em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: normal;
}
.saved-ads-product-description{
    font-size: 13px;
    font-family: "tw-cen-mt";
    color: #484848;
    line-height: 1.2em;
    font-weight: normal;
    margin-top: -5px;
}
.saved-ads-product-price-title,.saved-ads-product-id-title{
    font-family: "tw-cen-mt";
    color: #216db1;
}
.saved-ads-product-price-amount,.saved-ads-product-id{
    font-family: "tw-cen-mt";
    color: #f68521;
    font-size: 16px;
    margin-top: -2px;
}
/* ---------------------------- My Ads -------------------------------- */
.my-ads-product-heading{
    font-size: 28px;
    font-family: "tw-cen-mt";
    color: #216db1;
    margin-top: 25px;
}
/* ... */

